# traycer

./: Cargo.toml  LICENSE  Makefile  README.md
scenes/: cover.json  render.sh  test.json
src/: camera.rs  color.rs  light.rs  main.rs  material.rs  ray.rs  scene.rs  utils.rs  world.rs
src/linalg/: matrix.rs  tuple.rs
src/patterns/: checkers.rs  gradient.rs  mod.rs  pattern.rs  ring.rs  stripe.rs  test.rs
src/shapes/: cube.rs  cylinder.rs  mod.rs  plane.rs  shape.rs  sphere.rs  triangle.rs
