[package]
name = "traycer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
png = "0.17.2"
rand = "0.8.4"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4"]}

[profile.dev]
opt-level = 3
overflow-checks = false
codegen-units = 16
